--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -160,10 +160,27 @@ footer {
 
 .participants-list {
   margin: 0;
-  padding-left: 1.2rem;
-  list-style-type: disc;
+  padding-left: 0;
+  list-style-type: none;
   color: #374151;
   font-size: 0.97rem;
+}
+
+.participants-list.no-bullets {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.delete-participant {
+  cursor: pointer;
+  color: #c62828;
+  margin-left: 0.5em;
+  font-size: 1.1em;
+  vertical-align: middle;
+  transition: color 0.2s;
+}
+.delete-participant:hover {
+  color: #ff1744;
 }
 
 .no-participants {
